fill link by descr

--- a/lesson21/index.html
+++ b/lesson21/index.html
@@ -72,16 +72,22 @@
 		<h1>Домашні завдання (Урок 21).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html"></a>
+				<a target="_blank" href="./tasks/task01.html">Задача 1. Створити клас Client. На основі цього класу створити
+					клас GoldenClient</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html"></a>
+				<a target="_blank" href="./tasks/task02.html">Задача 2. Створити клас Bank, у якому зберігається масив клієнтів.
+					Виконати такі операції</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html"></a>
+				<a target="_blank" href="./tasks/task03.html">Задача 3. Розробити Класи(House, Dog, Bird). Подумайте яким має
+					бути спільний клас предок.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task04.html"></a>
+				<a target="_blank" href="./tasks/task04.html">Задача 4. Користувач задає місяць навчання учня (перевіряти чи є
+					числом, чи від 1 до 12, чи не канікули) та оцінку (перевіряти чи є числом, чи від 1 до 100). Вивести чи зможе
+					він виправити оцінку (якщо оцінка погана і це не останній місяць у семестрі). Обробку усіх помилок зробити з
+					використанням відповідних класів.</a>
 			</li>
 		</ol>
 	</div>
