--- a/lesson21/index.html
+++ b/lesson21/index.html
@@ -76,8 +76,8 @@
 					клас GoldenClient</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html">Задача 2. Створити клас Bank, у якому зберігається масив клієнтів.
-					Виконати такі операції</a>
+				<a target="_blank" href="./tasks/task02.html">Задача 2. Створити клас Bank, у якому зберігається масив
+					клієнтів.</a>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task03.html">Задача 3. Розробити Класи(House, Dog, Bird). Подумайте яким має
