--- a/lesson21/index.html
+++ b/lesson21/index.html
@@ -48,6 +48,10 @@
 			font-size: 20px;
 		}
 
+		li:not(:last-child) {
+			margin-bottom: 15px;
+		}
+
 		a {
 			color: inherit;
 			text-decoration: none;
