fill links by descr

--- a/lesson22/index.html
+++ b/lesson22/index.html
@@ -76,34 +76,42 @@
 		<h1>Домашні завдання (Урок 22).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task01.html"></a>
+				<a target="_blank" href="./tasks/task01.html">Задача 1. Визначити привітання у залежності від часу доби (Доброго
+					дня, Доброго ранку, Доброго вечора).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task02.html"></a>
+				<a target="_blank" href="./tasks/task02.html">Задача 2. Вивести дату у форматі “місяць – рік –
+					вихідний/робочий”.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task03.html"></a>
+				<a target="_blank" href="./tasks/task03.html">Задача 3. Визначити поточну пору року.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task04.html"></a>
+				<a target="_blank" href="./tasks/task04.html">Задача 4. Вивести назву дня.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task05.html"></a>
+				<a target="_blank" href="./tasks/task05.html">Задача 5. Користувач вводить дату народження. Визначити, скільки
+					йому повних років.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task06.html"></a>
+				<a target="_blank" href="./tasks/task06.html">Задача 6. Користувач іде у відпустку на 56 днів. Визначити дату на
+					момент його повернення.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task07.html"></a>
+				<a target="_blank" href="./tasks/task07.html">Задача 7. Користувач бере авто на вказану кількість годин.
+					Визначити кінцевий час повернення.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task08.html"></a>
+				<a target="_blank" href="./tasks/task08.html">Задача 8. Задаємо користувачу задачу з додавання двох чисел.
+					Визначити скільки секунд було використано для розв’язання задачі.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task09.html"></a>
+				<a target="_blank" href="./tasks/task09.html">Задача 9. Дано дата виробництва йогурта (вводимо рік, місяць,
+					день) та кількість днів придатності. Визначити чи є він придатним на даний момент.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task10.html"></a>
+				<a target="_blank" href="./tasks/task10.html">Задача 10. Сформувати масив з 1000 елементів від 1 до 800.
+					Порівняти час сортування бульбашкою і вставкою.</a>
 			</li>
 		</ol>
 	</div>
