--- a/lesson22/tasks/task02.html
+++ b/lesson22/tasks/task02.html
@@ -50,11 +50,57 @@
 		}
 	</style>
 	<script>
+		function getMonthName(monthNumber) {
+			let result
+			switch (monthNumber) {
+				case 0: result = 'Січень'
+					break
+				case 1: result = 'Лютий'
+					break
+				case 2: result = 'Березень'
+					break
+				case 3: result = 'Квітень'
+					break
+				case 4: result = 'Травень'
+					break
+				case 5: result = 'Червень'
+					break
+				case 6: result = 'Липень'
+					break
+				case 7: result = 'Серпень'
+					break
+				case 8: result = 'Вересень'
+					break
+				case 9: result = 'Жовтень'
+					break
+				case 10: result = 'Листопад'
+					break
+				case 11: result = 'Грудень'
+					break
+			}
+			return result
+		}
+		function getWeekDay(dayNumber) {
+			const result = dayNumber > 0 && dayNumber < 6 ? 'Робочий' : 'Вихідний'
+			return result
+		}
+		function getDateToPrint() {
+			const date = new Date()
+			const month = getMonthName(date.getMonth())
+			const year = date.getFullYear()
+			const day = getWeekDay(date.getDay())
+			const str = `${month} - ${year} - ${day}`
+			return str
+		}
+		window.onload = function () {
+			const dateToPrint = getDateToPrint()
+			alert(dateToPrint)
+		}
 	</script>
 </head>
 <body>
 	<div class="container">
-		<h2 class="task-title"></h2>
+		<h2 class="task-title">Задача 2. Вивести дату у форматі - “місяць – рік – вихідний/робочий”.</h2>
 	</div>
 </body>
 </html>
