--- a/lesson22/tasks/task05.html
+++ b/lesson22/tasks/task05.html
@@ -50,11 +50,34 @@
 		}
 	</style>
 	<script>
+		function getUserBirthday() {
+			const input = document.getElementById('dateInp')
+			const userDate = Date.parse(input.value)
+			const userAge = Math.floor((Date.now() - userDate) / 1000 / 60 / 60 / 24 / 365)
+			printFullUserAge(userAge)
+			return userAge
+		}
+
+		function printFullUserAge(userAge) {
+			const span = document.getElementById('result')
+			span.innerText = `Вам ${userAge} повних роки.`
+		}
+
+		window.onload = function () {
+			dateInp.onchange = getUserBirthday
+		}
 	</script>
 </head>
 <body>
 	<div class="container">
-		<h2 class="task-title"></h2>
+		<h2 class="task-title">Задача 5. Користувач вводить дату народження. Визначити, скільки йому повних років.</h2>
+		<label>
+			Введіть дату вашого народження
+			<!-- <input type="date" id="dateInp"> -->
+			<input type="text" placeholder="формата рік-місяць-день" id="dateInp">
+		</label>
+		<hr>
+		<span id="result"></span>
 	</div>
 </body>
 </html>
