--- a/lesson22/tasks/task06.html
+++ b/lesson22/tasks/task06.html
@@ -50,11 +50,65 @@
 		}
 	</style>
 	<script>
+		function getMonthName(monthNumber) {
+			let result
+			switch (monthNumber) {
+				case 0: result = 'Січень'
+					break
+				case 1: result = 'Лютий'
+					break
+				case 2: result = 'Березень'
+					break
+				case 3: result = 'Квітень'
+					break
+				case 4: result = 'Травень'
+					break
+				case 5: result = 'Червень'
+					break
+				case 6: result = 'Липень'
+					break
+				case 7: result = 'Серпень'
+					break
+				case 8: result = 'Вересень'
+					break
+				case 9: result = 'Жовтень'
+					break
+				case 10: result = 'Листопад'
+					break
+				case 11: result = 'Грудень'
+					break
+			}
+			return result
+		}
+
+		function getDateOfReturnFromVacation() {
+			const input = document.getElementById('vacationTerm')
+			const daysOfVacation = parseInt(input.value)
+			let date = new Date()
+
+			date.setDate(date.getDate() + daysOfVacation)
+			const dayOfReturning = date.getDate()
+			const monthOfReturning = getMonthName(date.getMonth())
+			const yearOfReturning = date.getFullYear()
+			const span = document.getElementById('result')
+			span.innerText = `День поверення з відпустки: ${dayOfReturning} ${monthOfReturning} ${yearOfReturning}.`
+		}
+
+		window.onload = function () {
+			vacationTerm.onchange = getDateOfReturnFromVacation
+		}
 	</script>
 </head>
 <body>
 	<div class="container">
-		<h2 class="task-title"></h2>
+		<h2 class="task-title">Задача 6. Користувач іде у відпустку на 56 днів. Визначити дату на момент його повернення.
+		</h2>
+		<label>
+			Введіть кількість днів відпустки
+			<input type="number" id="vacationTerm">
+		</label>
+		<hr>
+		<span id="result"></span>
 	</div>
 </body>
 </html>
