--- a/lesson22/tasks/task07.html
+++ b/lesson22/tasks/task07.html
@@ -50,11 +50,67 @@
 		}
 	</style>
 	<script>
+		function getMonthName(monthNumber) {
+			let result
+			switch (monthNumber) {
+				case 0: result = 'Січень'
+					break
+				case 1: result = 'Лютий'
+					break
+				case 2: result = 'Березень'
+					break
+				case 3: result = 'Квітень'
+					break
+				case 4: result = 'Травень'
+					break
+				case 5: result = 'Червень'
+					break
+				case 6: result = 'Липень'
+					break
+				case 7: result = 'Серпень'
+					break
+				case 8: result = 'Вересень'
+					break
+				case 9: result = 'Жовтень'
+					break
+				case 10: result = 'Листопад'
+					break
+				case 11: result = 'Грудень'
+					break
+			}
+			return result
+		}
+		function getCarReturnTime() {
+			const input = document.getElementById('rentTerm')
+			const hoursOfRent = parseInt(input.value)
+			let date = new Date()
+			date.setHours(date.getHours() + hoursOfRent)
+
+			const hourOfReturning = date.getHours()
+			const minutesOfReturning = date.getMinutes()
+			const dayOfReturning = date.getDate()
+			const monthOfReturning = getMonthName(date.getMonth())
+			const yearOfReturning = date.getFullYear()
+
+			const span = document.getElementById('result')
+			span.innerText = `Час повернення авто: ${hourOfReturning}:${minutesOfReturning}, ${dayOfReturning} ${monthOfReturning} ${yearOfReturning}.`
+		}
+
+		window.onload = function () {
+			rentTerm.onchange = getCarReturnTime
+		}
 	</script>
 </head>
 <body>
 	<div class="container">
-		<h2 class="task-title"></h2>
+		<h2 class="task-title">Задача 7. Користувач бере авто на вказану кількість годин. Визначити кінцевий час повернення.
+		</h2>
+		<label>
+			Введіть кількість годи на яку хочете взяти авто
+			<input type="number" id="rentTerm">
+		</label>
+		<hr>
+		<span id="result"></span>
 	</div>
 </body>
 </html>
